changed wording to persistent condition, fix ads logo cropping

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body, html {
 
 .ads-logo {
     max-height: 90%;
-    max-width: 100%;
+    max-width: 84%;
     width: auto;
     opacity: 1;
 }
